[package]
name = "cookbook_wgpu"
version = "0.1.0"
edition = "2021"
description = "A cookbook for wgpu"

[dependencies]
wgpu = "0.19.1"
winit = "0.29"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"
anyhow = "1.0"
raw-window-handle = "0.6"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[example]]
name = "triangle"
path = "examples/triangle.rs"

[[example]]
name = "clear_color"
path = "examples/clear_color.rs"
